# 100-days-of-build-your-own-llm

./: .gitignore  README.md  progress.md  pyproject.toml
days/day01/: Notes.md  Questions.md
days/day02/: Notes.md  Questions.md
days/day03/: Notes.md  Questions.md
src/progress_tracker/: __init__.py  cli.py  progress.py  utils.py
tests/: __init__.py  test_progress.py
